<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_SA_CH_STATE" Id="{c5b41153-0b35-470a-8b17-64f6ad6b9204}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SA_CH_STATE :
(
	BIT_ACTIVELY_MOVING			:=	16#00000001,
	BIT_CLOSED_LOOP_ACTIVE		:=	16#00000002,
	BIT_CALIBRATING				:=	16#00000004,
	BIT_REFERENCING				:=	16#00000008,
	BIT_MOVE_DELAYED			:=	16#00000010,
	BIT_SENSOR_PRESENT			:=	16#00000020,
	BIT_IS_CALIBRATED			:=	16#00000040,
	BIT_IS_REFERENCED			:=	16#00000080,
	BIT_END_STOP_REACHED		:=	16#00000100,
	BIT_RANGE_LIMIT_REACHED		:=	16#00000200,
	BIT_FOLLOWING_LIMIT_REACHED	:=	16#00000400,
	BIT_MOVEMENT_FAILED			:=	16#00000800,
	BIT_IS_STREAMING			:=	16#00001000,
	BIT_POSITIONER_OVERLOAD		:=	16#00002000,
	BIT_OVER_TEMPERATURE		:=	16#00004000,
	BIT_REFERENCE_MARK			:=	16#00008000,
	BIT_IS_PHASED				:=	16#00010000,
	BIT_POSITIONER_FAULT		:=	16#00020000,
	BIT_AMPLIFIER_ENABLED		:=	16#00040000,
	BIT_IN_POSITION				:=	16#00080000
) UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>