<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_SA_POS_SM_STATE" Id="{ddd94c2e-0f00-4637-8817-83fe5037b21c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SA_POS_SM_STATE :
(
	// Positioner State Machine States
	NOT_READY := 0,	// The system just started.
	CALIB,			// The Positioner is Calibrating
	INIT,			// The Positioner is INITialising/REFerencing
	POST_INIT,		// In POST_INIT we calibrate REF and read CFG once.
	CALIB_REF,		// Calibrate REF position.
	READY,			// NOT OPERATIONAL / READY (i.e. REFerenced)
	
	OP,				// Positioner is Operational
	MOVING,			// Positioner is moving
	STOP,			// Positioner is stopping
	ERROR			// Positioner is in error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>